--- a/flutterchat/pubspec.yaml
+++ b/flutterchat/pubspec.yaml
@@ -31,6 +31,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^4.1.0
+  firebase_auth: ^4.1.5
+  firebase_core: ^2.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
