--- a/flutterchat/pubspec.yaml
+++ b/flutterchat/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   cloud_firestore: ^4.1.0
   firebase_auth: ^4.1.5
   firebase_core: ^2.3.0
-  modal_progress_hud: ^0.1.3
+  modal_progress_hud_nsn: ^0.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
