--- a/flutterchat/pubspec.yaml
+++ b/flutterchat/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_auth: ^4.1.5
   firebase_core: ^2.3.0
   modal_progress_hud_nsn: ^0.3.0
+  flutter_chat_bubble: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
