--- a/flutterchat/pubspec.yaml
+++ b/flutterchat/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   firebase_core: ^2.3.0
   modal_progress_hud_nsn: ^0.3.0
   flutter_chat_bubble: ^2.0.0
+  image_picker: ^0.8.6
+  firebase_storage: ^11.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
