중간 업로드

--- a/flutterchat/ios/Runner/Info.plist
+++ b/flutterchat/ios/Runner/Info.plist
@@ -47,5 +47,16 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	    <string>We need an access</string>
+	<key>NSCameraUsageDescription</key>
+    	<string>We need an access</string>
+    <key>NSMicrophoneUsageDescription</key>
+    	<string>We need an access</string>
+</dict>
+<key>NSAppTransportSecurity</key>
+<dict>
+    <key>NSAllowsLocalNetworking</key>
+    <true/>
 </dict>
 </plist>
