--- a/mysql_test/pubspec.yaml
+++ b/mysql_test/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get:
   google_fonts:
+  http: ^0.13.5
+  fluttertoast: ^8.1.1
 
 dev_dependencies:
   flutter_test:
